# mundial-motor

./: .dockerignore  .env.example  .gitattributes  .gitignore  DEPLOY.md  Dockerfile  PLAN.md  Procfile  README.md  pyproject.toml  railway.json  render.yaml
.claude/agents/: agent-builder.md  backtest-engineer.md  code-guardian.md  data-adapter.md  learning-loop.md
.github/workflows/: keepalive.yml
data/: backtest.json  brain.pkl  mlb_weights.json  nt_weights.json
data/cache/: setpiece_events.csv  team_match_stats.csv  wc2026_results.csv
data/web/: fixtures.json  teams.json
data/web/players/: 1.json  10.json  1090.json  11.json  1108.json  1113.json  1118.json  12.json  13.json  15.json  1501.json  1504.json  1508.json  1531.json  1532.json  1533.json  1548.json  1567.json  1568.json  1569.json  16.json  17.json  2.json  20.json  22.json  23.json  2380.json  2382.json  2384.json  2386.json  25.json  26.json  27.json  28.json  3.json  31.json  32.json  (+11 more)
reports/: automation_report.md  brain_competition_A.json  brain_competition_report.md  fase_b_ejemplo.md  mlb_competition.json  mlb_props_demo.md  mlb_report.md  wc_live_report.md  wc_validation.json
reports/daily/: 2026-07-02.md
scripts/: backtest_blend.py  backtest_counts.py  backtest_elo.py  build_web_cache.py  demo_elo.py  diagnose_bias.py  fase_b_ejemplo.py  fetch_statsbomb.py  fetch_team_stats.py  freeze_brain.py  migrate_to_supabase.py  predict_matches.py  run_bot.py  run_brain_competition.py  run_chat_bot.py  run_daily.py  run_daily_update.py  run_grade.py  run_prematch.py  test_telegram.py
sql/: migration_sport.sql  schema.sql
src/mundial_bot/: __init__.py  agent.py  betlog.py  brain.py  clv.py  config.py  evaluator.py  pipeline.py  report.py  service.py  tracking.py
tests/: test_agent.py  test_backtest.py  test_betlog.py  test_blend.py  test_brain.py  test_brain_competition.py  test_clv.py  test_clv_backtest.py  test_corners_cards.py  test_count_backtest.py  test_devig.py  test_elo.py  test_ev.py  test_fixtures.py  test_football_data.py  test_goals_model.py  test_injuries.py  test_joint.py  test_leakage_guard.py  test_ledger.py  test_live.py  test_market_book.py  test_mlb_competition.py  test_mlb_jobs_api.py  test_mlb_props.py  test_notify.py  test_nt_data.py  test_odds.py  test_odds_eval.py  test_pipeline.py  test_player_stats.py  test_players_props.py  test_report.py  test_results.py  test_shots.py  test_staking.py  test_statsbomb.py  test_telegram_integration.py  test_tracking.py  test_wc_daily.py  (+3 more)
tests/data/: sample_odds.json
(+82 files in other folders)
