[project]
name = "mundial-value-bot"
version = "0.1.0"
description = "Bot multi-agente de value betting para el Mundial 2026 — modelo probabilístico + detección de valor + Telegram"
requires-python = ">=3.12"
dependencies = [
    # Stack científico FIJADO: el cerebro se commitea ya entrenado (data/brain.pkl);
    # Render debe instalar EXACTAMENTE estas versiones para que el pickle cargue idéntico.
    "pandas==3.0.3",
    "numpy==2.4.6",
    "scipy==1.17.1",
    "requests>=2.32",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "aiogram>=3.29",
    "aiohttp>=3.14.0",
    "apscheduler>=3.10",
    "keeks>=0.3",
    "anthropic>=0.40",
]

[project.optional-dependencies]
model = ["penaltyblog==1.11.0"]
xg = ["statsbombpy>=1.11"]
api = ["fastapi>=0.110", "uvicorn[standard]>=0.30"]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mundial_bot"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "network: tests que hacen llamadas de red reales (saltear con -m 'not network')",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
